variables.Variables.scala.error
Erreur de compilation :
Variables:15: error: not found: value poseBsicuit
poseBsicuit() 
^